# AI-Trucking

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: cap_models.py  capdb.py  clock.py  config.py  db.py  main.py  models.py  schemas.py  seed.py  sim.py
backend/app/agent/: actionlog.py  approvals.py  brain.py  customer_comms.py  document_agent.py  email_agent.py  image_agent.py  inbound_attachments.py  inquiry_agent.py  policy.py  router.py  storage.py  tools.py  vision.py
backend/app/monitor/: dispatch.py  hos.py  notify.py  routing.py  service.py
backend/app/routers/: agent.py  approvals.py  assistant.py  capabilities.py  demo.py  events.py  fleet.py  intake.py  loads.py  monitor.py  sim.py  survey.py  tools.py
backend/app/services/: email_send.py  inbound_processor.py  resend_inbound.py
backend/scripts/: smoke_email.py
backend/sql/: seed_supabase.sql
control-center-demo/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.js  config.example.js  docker-compose.nas.yml  docker-compose.prod.yml  docker-compose.yml  index.html  nginx.conf  server.js  styles.css
control-center-demo/deploy/: copy-to-nas.ps1  nas-start.sh  nginx-host.conf  pack-for-nas.ps1
docs/: PLAN.md  ai-flows.md  deployment-plan.md  how-to-demo.md  market-survey.md  monitoring-flow.md
frontend/: .env.example  README.md  package-lock.json  package.json
scripts/: apply_supabase_schema.py  grandfather_dashboard_users.py  test_supabase_layer.py
supabase/: README.md  enable_user_operations.sql  schema.sql
(+93 files in other folders)
