[project]
name = "ai-trucking-backend"
version = "0.1.0"
description = "Backend for a fully AI-run trucking company (FastAPI + Postgres + Claude)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
